# kernel-os

./: Cargo.toml
crates/kos-abi/: Cargo.toml
crates/kos-abi/src/: abi.rs  command.rs  dispatcher.rs  envelope.rs  error.rs  lib.rs  protocol.rs  request.rs  response.rs  version.rs
crates/kos-abi/tests/: abi.rs  dispatcher.rs
crates/kos-agent/: Cargo.toml
crates/kos-agent/src/: agent.rs  executor.rs  lib.rs  manager.rs  planner.rs  state.rs
crates/kos-agent/tests/: agent.rs
crates/kos-capability/: Cargo.toml
crates/kos-capability/src/: capability.rs  lib.rs  manager.rs  registry.rs  request.rs  response.rs
crates/kos-capability/tests/: capability.rs
crates/kos-compute/: Cargo.toml
crates/kos-compute/src/: backend.rs  device.rs  lib.rs  manager.rs  registry.rs
crates/kos-compute/tests/: compute.rs
crates/kos-context/: Cargo.toml
crates/kos-context/src/: context.rs  lib.rs  manager.rs  metadata.rs
crates/kos-context/tests/: context.rs
crates/kos-core/: Cargo.toml
crates/kos-core/src/: error.rs  ids.rs  lib.rs  object.rs  version.rs
crates/kos-core/tests/: core.rs
crates/kos-knowledge/: Cargo.toml
crates/kos-knowledge/src/: document.rs  lib.rs  manager.rs  memory.rs  store.rs
crates/kos-knowledge/tests/: knowledge.rs
crates/kos-mission/: Cargo.toml
crates/kos-mission/src/: lib.rs  manager.rs  mission.rs  state.rs
crates/kos-mission/tests/: mission.rs
crates/kos-orchestrator/: Cargo.toml
crates/kos-orchestrator/src/: lib.rs  orchestrator.rs  scheduler.rs
crates/kos-runtime/: Cargo.toml
crates/kos-runtime/src/: lib.rs  manager.rs  mission.rs  runtime.rs  scheduler.rs  state.rs
crates/kos-runtime/tests/: integration.rs  runtime.rs
crates/kos-trust/: Cargo.toml
crates/kos-trust/src/: identity.rs  lib.rs  manager.rs  permission.rs  policy.rs
crates/kos-trust/tests/: trust.rs
