[workspace]
resolver = "2"

members = [
    "crates/kos-core",
    "crates/kos-runtime",
    "crates/kos-context",
    "crates/kos-compute",
    "crates/kos-capability",
    "crates/kos-trust",
    "crates/kos-knowledge",
    "crates/kos-agent", "crates/kos-orchestrator",
"crates/kos-orchestrator", "crates/kos-abi",

]

